# rocker

./: .gitconfig  .gitignore  .ycm_extra_conf.py  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain
.cargo/: config
core/: Cargo.toml
core/src/: err.rs  lib.rs  master.rs
core/src/loop/: metal.rs  mod.rs
core/src/utils/: macros.rs  mod.rs
doc/: mermaid.md
librocker_client/: CMakeLists.txt  README.md
librocker_client/cmake_toolchain/: aarch64-linux-gnu.cmake  armv7-linux-musleabihf.cmake  x86_64-linux-gnu.cmake
librocker_client/src/: err_no.h  global_def.h  io.c  io.h  lib.c  lib.h  log.c  log.h  namespace.c  namespace.h  rocker_server_uau_addr_cfg.h  utils.c  utils.h
librocker_client/tests/: main.c  test_utils.h
librocker_client_wrapper/: Cargo.toml  build.rs  ld_path
librocker_client_wrapper/src/: err.rs  lib.rs
librocker_client_wrapper/src/client_ffi/: metal.rs  mod.rs
rocker_server/: Cargo.toml
rocker_server/src/: err.rs  main.rs
tests/: test_on_target.sh
tools/: fmt.sh
tools/crosstool-ng/: aarch64-linux-gnu.cfg  armv7_linux_musleabihf.cfg
