[package]
name = "rocker_server"
version = "0.1.0"
authors = ["fh <hui.fan@mail.ru>"]
edition = "2018"

[dependencies]
core = { path = "../core" }
error-chain = { git = "https://gitee.com/kt10/error-chain", branch = "master" }

nix = "0.15"
threadpool = "1.7.1"
libc = "0.2.62"
lazy_static = "1.4.0"

[dev-dependencies]

[build-dependencies]
